# AVData

./: .gitignore
ford_demo/: CMakeLists.txt
ford_demo/include/: bev2d_helpers.hpp
ford_demo/launch/: multi_extract_scans.launch
ford_demo/scripts/: graph_gtpose_lidar_timestamp_diffs.py  play_fordav_bag.sh
ford_demo/src/: bev2d_helpers.cpp  extract_lidar_scans.cpp  generate_fordav_bev2d_video.cpp
